--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
 greenlet==1.1.2
 idna==3.3
 importlib-metadata==4.8.1
