--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 alembic==1.7.4
 bcrypt==3.2.0
+black==21.9b0
 certifi==2021.10.8
 cffi==1.14.6
 charset-normalizer==2.0.7
 click==8.0.3
+dnspython==2.1.0
+email-validator==1.1.3
 Flask==2.0.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
@@ -18,10 +21,16 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 Mako==1.1.5
 MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.0
 pycparser==2.20
+regex==2021.10.8
 requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.25
+tomli==1.2.1
+typing-extensions==3.10.0.2
 urllib3==1.26.7
 Werkzeug==2.0.2
 WTForms==2.3.3
