--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
 Flask-Bcrypt==0.7.1
+Flask-Dance==5.0.0
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
@@ -22,16 +23,19 @@ Jinja2==3.0.2
 Mako==1.1.5
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
+oauthlib==3.1.1
 pathspec==0.9.0
 platformdirs==2.4.0
 pycparser==2.20
 regex==2021.10.8
 requests==2.26.0
+requests-oauthlib==1.3.0
 six==1.16.0
 SQLAlchemy==1.4.25
 tomli==1.2.1
 typing-extensions==3.10.0.2
 urllib3==1.26.7
+URLObject==2.4.3
 Werkzeug==2.0.2
 WTForms==2.3.3
 zipp==3.6.0
